Opened 19 years ago

Closed 17 years ago

#827 closed bug (fixed)

app_server refresh bug on workspace change

Reported by: axeld Owned by: axeld
Priority: normal Milestone: R1
Component: Servers/app_server Version:
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

If two windows are on both workspaces (the one you're coming from and the one you're switching to), and at the same position, but have a different order, their drawings are not correctly updated. To reproduce just launch the Screen and Backgrounds preferences applications, switch workspaces, click the one behind to front, and switch back to the previous workspace.

Change History (5)

comment:1 by axeld, 17 years ago

Owner: changed from axeld to stippi

comment:2 by axeld, 17 years ago

Milestone: R1R1/alpha

comment:3 by axeld, 17 years ago

Milestone: R1/alphaR1

Not really that urgent or bad.

comment:4 by axeld, 17 years ago

Owner: changed from stippi to axeld
Status: newassigned

comment:5 by axeld, 17 years ago

Resolution: fixed
Status: assignedclosed

Fixed in hrev23398.

Note: See TracTickets for help on using tickets.