Fixed two dirty region problems of the workspace switching code: * If two intersecting windows didn't change their position but their   order, the dirty region wouldn't contain the region that would need   to be updated because of that order change. This fixes bug #827. * When a hidden window was on the new workspace (but not on the old one),   its region would be included in the dirty region, but shouldn't have   been. This caused the app_server to update a larger region than   necessary.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@23398 a95241bf-73f2-0310-859d-f6bbb57e9c96